This documents significant changes in the dev branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh
Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2022-08-06:

- Fixed an interactive shell crashing on redefining, then unsetting one of
  the predefined aliases.

- Fixed an interactive shell crashing on redefining one of the predefined
  aliases, then executing a shell script that does not start with a #! path.

2022-08-05:

- Reverted a buggy exec optimisation introduced on 2022-06-18. It is known
  to make the build scripts of GNU binutils produce corrupted results.

2022-08-01:
   _        _        ___ _____                          ___   ___   ___
  | | _____| |__    / _ \___ / _   _   _   _ __ ___    / / | / _ \ / _ \
  | |/ / __| '_ \  | (_) ||_ \| | | |_| |_| '_ ` _ \  / /| || | | | | | |
  |   <\__ \ | | |  \__, |__) | |_| |_   _| | | | | |/ / | || |_| | |_| |
  |_|\_\___/_| |_|    /_/____/ \__,_| |_| |_| |_| |_/_/  |_(_)___(_)___/

- Exactly ten years after ksh 93u+ 2012-08-01, we now have a new ksh release.
  Many thanks to all the direct and indirect contributors for their hard work!
  (Note: this applies to the 1.0 branch, but seemed worth mentioning here)

2022-07-28:

- Fixed BUG_IFSGLOBS ("$*" does pattern matching if the first character of
  $IFS is a wildcard).

2022-07-27:

- Fixed a bug introduced on 2022-02-08 where $PPID was incorrect when a script
  without a #! path was executed.

- Fixed a completion bug in the vi line editor. It now correctly completes
  the sole member of a directory when tab is pressed immediately after /.
  Thanks to K. Eugene Carlson for the report and the fix.

2022-07-26:

- Fixed incorrect handling of initial zeros in test/[ and [[ arithmetic
  comparison operators. For example, [[ 0x0A -eq 10 ]] yielded false but
  [[ 1+0x0A -eq 11 ]] yielded true.

- Fixed comparing long floating point (typeset -lF) values in test/[ and [[;